test/ui/test/packages/circular-components-in-same-package/package.metadata
# TEST fail check

name: loops,
version: "0.0.0",

components: {
    # cycle 0
    loops: {
        type: library,
        path: "source/library.lushui",
        dependencies: { loops: {} },
    },

    # cycle 1
    cycle1component0: {
        type: library,
        path: "source/cycle1component0.lushui",
        dependencies: { cycle1component1: {} },
    },
    cycle1component1: {
        type: library,
        path: "source/cycle1component1.lushui",
        dependencies: { cycle1component2: {} },
    },
    cycle1component2: {
        type: library,
        path: "source/cycle1component2.lushui",
        dependencies: { cycle1component0: {} },
    },

    # cycle 2
    cycle2component0: {
        type: library,
        path: "source/cycle2component0.lushui",
        dependencies: {
            cycle2component1: {},
            cycle2component2: {},
            unrelated: {},
        },
    },
    cycle2component1: {
        type: library,
        path: "source/cycle2component1.lushui",
        dependencies: { cycle2component0: {}, unrelated: {} },
    },
    cycle2component2: {
        type: library,
        path: "source/cycle2component2.lushui",
        dependencies: { cycle2component0: {} },
    },
    unrelated: { type: library, path: "unrelated.lushui" }, # not quite a part

    # cycle 3
    snake0: { type: library, path: "s0", dependencies: { snake1: {} } },
    snake1: { type: library, path: "s1", dependencies: { snake0: {} } },
    outsider: { type: library, path: "o", dependencies: { snake0: {} } }, # not quite a part
},

# @Task add description esp. for cycle 3 (w/ outsider) + bout 'unrelated'
